--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <div class="centerized"></div>
         <h1>This is our website!</h1>
         <h3>(isn't is neat?)</h3>
-        <h3><a href="/data">View the Data</a></h3>
+        <h3><a href="/data">View the Data.</a></h3>
     </div>
 </body>
 </html>
